Fix: delete e criar usuário
